[package]
name = "nocturnal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WYSIWYG editor based on WASM. Work in progress."
repository = "https://github.com/narzantaria/nocturnal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
